--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,15 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/dashboardFragment"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:id="@+id/ic_dash"
+        android:icon="@drawable/ic_dash"
         android:title="@string/dashboard_title" />
     <item
-        android:id="@+id/taskFragment"
-        android:icon="@drawable/ic_check_circle_black_24dp"
+        android:id="@+id/ic_tasks"
+        android:icon="@drawable/ic_tasks"
         android:title="@string/task_title" />
     <item
-        android:id="@+id/statsFragment"
-        android:icon="@drawable/ic_stars_black_24dp"
+        android:id="@+id/ic_stats"
+        android:icon="@drawable/ic_stats"
         android:title="@string/stats_title" />
 </menu>
