--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,14 +3,14 @@
 
     <item
         android:id="@+id/ic_dash"
-        android:icon="@drawable/ic_dash"
+        android:icon="@drawable/dash_icon"
         android:title="@string/dashboard_title" />
     <item
         android:id="@+id/ic_tasks"
-        android:icon="@drawable/ic_tasks"
+        android:icon="@drawable/tasks_icon"
         android:title="@string/task_title" />
     <item
         android:id="@+id/ic_stats"
-        android:icon="@drawable/ic_stats"
+        android:icon="@drawable/stats_icon"
         android:title="@string/stats_title" />
 </menu>
